Bug 1716108 - Do not set buffer scale when using compositor integration. r=stransky

Because `NativeLayerWayland` uses an invisible 1x1 pixel buffer for
`moz_container_wayland` which only serves as parent surface, not
holding any content.

If we set a buffer scale >1 to it, this would violate the spec:
> The new size of the surface is calculated based on the buffer
> size transformed by the inverse buffer_transform and the inverse
> buffer_scale. This means that at commit time the supplied buffer
> size must be an integer multiple of the buffer_scale. If that's
> not the case, an invalid_size error is sent.

Currently compositors appear to not strictly follow this, only
printing warnings. This could change at any time though.

Differential Revision: https://phabricator.services.mozilla.com/D119995